Tue Feb 16 19:03:46 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/src/DataReaderListener.cpp:

          Adding even more information to diagnostic message.

Tue Feb 16 17:51:26 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/README:

          Updated README with additional pointers for applying color
          filters.

Tue Feb 16 17:42:10 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/README:

          Updated README with additional pointers for verifying the
          plugin install and applying color filters.

Tue Feb 16 17:32:24 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/odds_dissector.rc:

          Updated include Version.h include.

Tue Feb 16 17:23:47 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/colorfilters:

          Updated coloring rule for important DCPS packets.

Tue Feb 16 17:21:12 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/src/DataReaderListener.cpp:

          Added more information to a diagnostic message.

        * performance-tests/Bench/tests/thru/test-commands.txt:

          Corrected the command name being used.

Tue Feb 16 17:01:23 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/README:
        * tools/odds_dissector/colorfilters:

          Added canned color filters to identify DCPS protocol packets.

        * tools/odds_dissector/odds_packet.cpp:

          Minor formatting updates.

Tue Feb 16 15:24:20 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * java/idl2jni/tests/simple/idl2jni_test_simple.mpc:
        * java/idl2jni/tests/simple/simple.idl:

          Enabled the test after commenting-out some unsupported IDL
          constructs (passing arrays as parameters to operations).

Tue Feb 16 06:44:29 UTC 2010  Steven Stallion  <stallions@ociweb.com>
